# prisma-airs-plugin-openclaw

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SKILL.md  config.example.yaml  docker-compose.yml  middleware-plan-v2.md  middleware-plan.md  mkdocs.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  mkdocs-deploy.yml  publish.yml
blog/: securing-ai-agents-with-prisma-airs.md
docker/: Dockerfile  Dockerfile.e2e  Dockerfile.npm-e2e  auth-profiles-e2e.json  auto-pair.sh  entrypoint-npm.sh  entrypoint.sh  openclaw-e2e.json  openclaw-npm-e2e.json
docs/: index.md
docs/about/: license.md  release-notes.md
docs/architecture/: design-decisions.md  hooks.md  overview.md
docs/css/: custom.css
docs/development/: contributing.md  local-setup.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: dlp-masking.md  docker.md  fail-modes.md  tool-gating.md
docs/hooks/: index.md  prisma-airs-audit.md  prisma-airs-context.md  prisma-airs-guard.md  prisma-airs-inbound-block.md  prisma-airs-llm-audit.md  prisma-airs-outbound-block.md  prisma-airs-outbound.md  prisma-airs-prompt-scan.md  prisma-airs-tool-audit.md  prisma-airs-tool-guard.md  prisma-airs-tool-redact.md  prisma-airs-tools.md
docs/reference/: configuration.md  detection-categories.md  scan-result.md
docs/superpowers/plans/: 2026-03-31-hook-consolidation.md
docs/superpowers/specs/: 2026-03-31-hook-consolidation-design.md
e2e/: smoke-test.sh
prisma-airs-plugin/: .npmignore  README.md  eslint.config.js  index.test.ts  index.ts  mkdocs.yml  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
prisma-airs-plugin/.husky/: pre-commit
prisma-airs-plugin/docs/: index.md
prisma-airs-plugin/docs/about/: license.md  release-notes.md
prisma-airs-plugin/docs/architecture/: design-decisions.md  hooks.md  overview.md
prisma-airs-plugin/docs/development/: contributing.md  local-setup.md  testing.md
prisma-airs-plugin/docs/getting-started/: configuration.md  installation.md  quick-start.md
prisma-airs-plugin/docs/guides/: dlp-masking.md  fail-modes.md  tool-gating.md
prisma-airs-plugin/src/: config.test.ts  config.ts  dlp.test.ts  dlp.ts  scan-cache.test.ts  scan-cache.ts  scanner.test.ts  scanner.ts
scripts/: audit.py  scan.py
src/prisma_airs_skill/: __init__.py  audit.py  scan.py
tests/: conftest.py  test_audit.py  test_scan.py
(+65 files in other folders)
