[project]
name = "prisma-airs-skill"
version = "0.1.0"
description = "OpenClaw plugin for Prisma AIRS (AI Runtime Security) from Palo Alto Networks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "cdot65" }
]
keywords = ["prisma", "airs", "ai-security", "openclaw", "palo-alto"]
dependencies = [
    "pan-aisecurity>=0.8.0.5.post2",
    "pyyaml>=6.0.3",
]

[project.scripts]
prisma-airs-scan = "prisma_airs_skill.scan:main"
prisma-airs-audit = "prisma_airs_skill.audit:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prisma_airs_skill"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["prisma_airs_skill"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aisecurity.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
